# little-red-beanie

./: .gitignore  CLAUDE.md  HANDOFF.md  README.md
app/: .dockerignore  .env.example  .gitignore  .new_agent_id.txt  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
app/public/: manifest.webmanifest  sw.js
app/public/images/iran/: CREDITS.txt
app/src/: App.tsx  config.ts  index.css  main.tsx
app/src/components/: ColorPalette.tsx  EmergencyTouchZone.tsx  EscalationGlow.tsx  KimiSilhouette.tsx  PushToTalk.tsx
app/src/ctx/: ctxGenerator.ts
app/src/kiosk/: useKiosk.ts
app/src/phases/: Phase1Onboarding.tsx  Phase2Coloring.tsx  Phase3Carousel.tsx  Phase4Question.tsx  Phase5Slideshow.tsx
app/src/state/: appStore.ts
app/src/voice/: audioFallback.ts  elevenlabs.ts  phaseEntryGuard.ts  toolHandler.ts
evals/: .env.example  conftest.py  pyproject.toml  runner.py  test_crisis.py  test_phase_1_3.py  test_phase_4_5.py  test_probes.py
input/: pitch-story.md
output/: elevenlabs-integration-checklist.md  farb-emotions-recherche.md  methoden-grundlagen.md  projektstarter.md  system-prompt-design.md  tech-stack.md  voice-design-prompt.md  wetterbericht-recherche.md
prompts/: audio-asset-manifest.md  iran-asset-manifest.md  system-prompt-elevenlabs.md  system-prompt-v1.md
tasks/: pitch-prep-2026-05-30.md  system-prompt-implementation-plan.md  todo.md
