[project]
name = "little-red-beanie-evals"
version = "0.1.0"
description = "Eval-Suite for the Little Red Beanie system prompt (Opus 4.7)"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.45.0",
    "pytest>=8.0.0",
    "python-dotenv>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["."]
addopts = "-v --tb=short"
